# Numerical-Linear-Algebra-Tref-Bau

./: .gitignore  README.md
01-Matrix-Vector-Multiplication/exercises/: 01-matrix-vector-multiplication.tex
02-Orthogonal-Vectors-and-Matrices/exercises/: 02-orthogonal-vectors-and-matrices.tex
03-Norms/exercises/: 03-norms.tex
04-The-Singular-Value-Decomposition/exercises/: 04-the-singular-value-decomposition.tex
04-The-Singular-Value-Decomposition/exercises/03-svd-vector-plot/: README.md  main.py  plot_singular_vectors.py  poetry  pyproject.toml
05-More-on-the-SVD/exercises/: 05-more-on-the-svd.tex
06-Projectors/exercises/: 06-projectors.tex
07-QR-Factorization/exercises/: 07-qr-factorization.tex
08-Gram-Schmidt-Factorization/exercises/: 08-gram-schmidt-factorization.tex
08-Gram-Schmidt-Factorization/exercises/02-qr-factorization-mgs/: README.md  qr_mgs.py
08-Gram-Schmidt-Factorization/exercises/03-qr-factorization-mgs/: main.py  pyproject.toml
09-MATLAB/exercises/: 09-matlab.tex
09-MATLAB/exercises/01-legendre-polynomials/: README.md  plot_legendre.py  pyproject.toml
