[tool.poetry]
name = "03-svd-vector-plot"
version = "0.1.0"
description = "Exercise 4.3 in Numerical Linear Algebra by Trefethen and Bau"
authors = ["Sergio Garcia <segarciat314@gmail.com>"]
readme = "README.md"
# Use only for dependency management, not packaging
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
