[tool.poetry]
name = "qr-mgs"
version = "0.1.0"
description = "Implementation of QR factorization using the modified Gram Schmidt algorithm"
authors = ["Sergio Garcia <segarciat314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
