[tool.poetry]
name = "01-legendre-polynomials"
version = "0.1.0"
description = "Program to plot approximate Legendre polynomials"
authors = ["Sergio Garcia <segarciat314@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.0"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
